# o-point

./: .gitignore  README.md  pyproject.toml
examples/: quickdemo.py  udf_demo.py
o_point/: __init__.py  materials.py  render.py  sampler.py  spatial.py  utils.py
tests/: test_gltf_material_semantics.py
