[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "o_point"
version = "4.0.0"
requires-python = ">=3.10"
authors = [
    { name = "Hong Li", email = "link0502@buaa.edu.cn" }
]
description = "GPU surface sampling with nvdiffrast dr.texture — no C++/CUDA extensions"
dependencies = [
    "torch",
    "numpy",
    "trimesh",
    "pillow",
    "nvdiffrast",
]

[project.optional-dependencies]
spatial = ["cubvh @ git+https://github.com/Luh1124/cubvh.git"]

[tool.setuptools.packages.find]
include = ["o_point*"]
